# aeneassoft

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  CORE.md  LICENSE  MVP_STATUS.md  PRODUCT_IDENTITY.md  README.md  STRATEGY_REPORT.md  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  setup.bat  setup.sh
.claude/: launch.json  settings.local.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  provider_request.md
.github/workflows/: auto-label.yml  ci.yml  stats.yml  welcome.yml
backend/: Dockerfile  package.json
cli/: package.json
demo/: run.py
frontend/: .env.example  .env.production  Dockerfile  package-lock.json  package.json  proxy.ts
legal/: DPA_TEMPLATE.md  TERMS_OF_SERVICE.md
proxy/: Dockerfile  package.json  tsconfig.json
proxy/src/: index.ts  (+4 more)
scripts/: awesome_list_entry.md  demo_circuit_breaker.py  discord_setup.py  patch_compose.py  render_demo_png.js
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/aeneas_agentwatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdks/python/agentwatch/: __init__.py  circuit_breaker.py  context.py  exporter.py  interceptor.py  patcher.py  schema.py
sdks/python/agentwatch.egg-info/: PKG-INFO  SOURCES.txt
sdks/python/tests/: test_circuit_breaker.py  test_context_integration.py  test_interceptor.py  test_patcher.py  test_safe_pause_resume.py
tests/: generate_test_data.py  stress_clickhouse.py  stress_ingest.py  stress_orphans.py  stress_queries.py  test_e2e.py  test_kafka_pipeline.py  test_zdr.py
(+112 files in other folders)
