[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentwatch"
version = "0.1.0"
description = "[PRODUCTNAME] Python SDK — Auto-instrumentation for AI agent observability"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]

[tool.setuptools.packages.find]
include = ["agentwatch*"]
